--- a/TestApplicaton/Views/Home/Index.cshtml
+++ b/TestApplicaton/Views/Home/Index.cshtml
@@ -1,94 +1,94 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+<style>
+    .hover:hover {
+        background-color: aliceblue;
+    }
+    .post-flex {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 12px;
+    }
+    .edit-body {
+        display: none
+    }
+</style>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+@if (SignInManager.IsSignedIn(User))
+{
+    <h2>Your Dashboard. Hello @UserManager.GetUserName(User)!</h2>
+    @if (ViewBag.Group != null)
+    {
+        <h2>@ViewBag.Group.Name</h2>
+    }
+
+    @if (ViewBag.Posts != null)
+    {
+        foreach (var post in ViewBag.Posts)
+        {
+        <div class="hover card" id="body-@post.Id">
+            <div class="card-body">
+                <div id="post-body-@post.Id" class="post-flex">
+                    <div>
+                        <h4 class="card-title">@post.PostUser</h4>
+                        <p class="card-text">@post.Content</p>
+                    </div>
+                    <div>
+                        @if(@post.PostUser.Id == @UserManager.GetUserId(User)) {
+                        <button class="edit-button btn" id="edit-@post.Id" onclick="showEdit(@post.Id)">
+                            <i class="bi bi-pencil-square"></i>
+                        </button>
+                        }
+                    </div>
+                </div>
+                <div id="edit-body-@post.Id" class="edit-body">
+                    <form asp-controller="Home" asp-action="EditPost" method="post" id="edit-form-@post.Id">
+                        <input name="id" type="hidden" value="@post.Id" />
+                        <div class="form-group">
+                            <textarea onkeydown="pressed(event, 'edit-form-@post.Id')" class="form-control" name="content" rows="3">@post.Content</textarea>
+                        </div>
+                        <input type="submit" class="hide" />
+                    </form>
+                </div>
+            </div>
+        </div>
+        }
+    }
+
+
+
+    <form asp-controller="Home" asp-action="SharePost" method="post" id="share-post-form">
+        <div class="form-group">
+            <textarea onkeydown="pressed(event, 'share-post-form')" class="form-control" name="content" rows="3" placeholder="Message @ViewBag.Group.Name"></textarea>
+        </div>
+    </form>
+
+    @section Scripts {
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+        <script>
+            function showEdit(id) {
+                document.getElementById("edit-body-" + id).style.display = "block";
+                document.getElementById("post-body-" + id).style.display = "none";
+            }
+            function pressed(e, id) {
+                if ((window.event ? event.keyCode : e.which) == 13) {
+                    document.getElementById(id).submit();
+                }
+            }
+        </script>
+    }
+
+
+}
+else
+{
+    <h2>Welcome to Chatter</h2>
+}
+
