--- a/TestApplicaton/Views/Shared/_Layout.cshtml
+++ b/TestApplicaton/Views/Shared/_Layout.cshtml
@@ -30,16 +30,16 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-controller="Projects" asp-action="Index">Projects</a></li>
+                    <li><a asp-controller="AboutMe" asp-action="Index">About me</a></li>
+                    <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
 
-    <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
         @RenderBody()
