--- a/TestApplicaton/Views/Home/Index.cshtml
+++ b/TestApplicaton/Views/Home/Index.cshtml
@@ -10,12 +10,14 @@
     .hover:hover {
         background-color: aliceblue;
     }
+
     .post-flex {
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 0 12px;
     }
+
     .edit-body {
         display: none
     }
@@ -28,47 +30,55 @@
     {
         <h2>@ViewBag.Group.Name</h2>
     }
+    else
+    {
+        <p>Please join a group from the groups page</p>
+    }
 
     @if (ViewBag.Posts != null)
     {
         foreach (var post in ViewBag.Posts)
         {
-        <div class="hover card" id="body-@post.Id">
-            <div class="card-body">
-                <div id="post-body-@post.Id" class="post-flex">
-                    <div>
-                        <h4 class="card-title">@post.PostUser</h4>
-                        <p class="card-text">@post.Content</p>
-                    </div>
-                    <div>
-                        @if(@post.PostUser.Id == @UserManager.GetUserId(User)) {
-                        <button class="edit-button btn" id="edit-@post.Id" onclick="showEdit(@post.Id)">
-                            <i class="bi bi-pencil-square"></i>
-                        </button>
-                        }
-                    </div>
-                </div>
-                <div id="edit-body-@post.Id" class="edit-body">
-                    <form asp-controller="Home" asp-action="EditPost" method="post" id="edit-form-@post.Id">
-                        <input name="id" type="hidden" value="@post.Id" />
-                        <div class="form-group">
-                            <textarea onkeydown="pressed(event, 'edit-form-@post.Id')" class="form-control" name="content" rows="3">@post.Content</textarea>
+            <div class="hover card" id="body-@post.Id">
+                <div class="card-body">
+                    <div id="post-body-@post.Id" class="post-flex">
+                        <div>
+                            <h4 class="card-title">@post.PostUser</h4>
+                            <p class="card-text">@post.Content</p>
                         </div>
-                        <input type="submit" class="hide" />
-                    </form>
+                        <div>
+                            @if (@post.PostUser.Id == @UserManager.GetUserId(User))
+                            {
+                                <button class="edit-button btn" id="edit-@post.Id" onclick="showEdit(@post.Id)">
+                                    <i class="bi bi-pencil-square"></i>
+                                </button>
+                            }
+                        </div>
+                    </div>
+                    <div id="edit-body-@post.Id" class="edit-body">
+                        <form asp-controller="Home" asp-action="EditPost" method="post" id="edit-form-@post.Id">
+                            <input name="id" type="hidden" value="@post.Id" />
+                            <div class="form-group">
+                                <textarea onkeydown="pressed(event, 'edit-form-@post.Id')" class="form-control" name="content" rows="3">@post.Content</textarea>
+                            </div>
+                            <input type="submit" class="hide" />
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
         }
     }
 
 
+    @if (ViewBag.Group != null)
+    {
+        <form asp-controller="Home" asp-action="SharePost" method="post" id="share-post-form">
+            <div class="form-group">
+                <textarea onkeydown="pressed(event, 'share-post-form')" class="form-control" name="content" rows="3" placeholder="Message @ViewBag.Group.Name"></textarea>
+            </div>
+        </form>
+    }
 
-    <form asp-controller="Home" asp-action="SharePost" method="post" id="share-post-form">
-        <div class="form-group">
-            <textarea onkeydown="pressed(event, 'share-post-form')" class="form-control" name="content" rows="3" placeholder="Message @ViewBag.Group.Name"></textarea>
-        </div>
-    </form>
 
     @section Scripts {
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
