--- a/TestApplicaton/Views/Shared/_LoginPartial.cshtml
+++ b/TestApplicaton/Views/Shared/_LoginPartial.cshtml
@@ -8,13 +8,27 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
+                @if (UserManager.GetUserAsync(User).Result.GroupId == 0)
+                {
+                    <button type="button" class="btn btn-link navbar-btn navbar-link" data-toggle="modal" data-target="#create-club-modal">
+                        Create a club
+                    </button>
+                }
+
+            </li>
+            <li>
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
+
+
+
         </ul>
+
     </form>
+
 }
 else
 {
