--- a/TestApplicaton/Views/Groups/Index.cshtml
+++ b/TestApplicaton/Views/Groups/Index.cshtml
@@ -16,44 +16,20 @@
     }
 </style>
 
-    <div class="modal fade" id="create-club-modal" tabindex="-1" aria-labelledby="create-club-modal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Create a club</h5>
-                </div>
-                <form asp-controller="Groups" asp-action="CreateGroup" method="post">
-
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label class="form-label">Name</label>
-                            <input class="form-control" name="name" />
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Description</label>
-                            <textarea class="form-control" name="description" rows="3"></textarea>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
-                    </div>
-                </form>
-
-            </div>
-        </div>
-    </div>
 
 @if (ViewBag.Groups != null)
 {
     foreach (var group in ViewBag.Groups)
-    {
-        <div class="hover card">
+    { 
+        <div class="hover card" style="border: 2px solid black; margin: 5px 0px 0px 5px;">
             <div class="card-body">
                 <div class="post-flex">
-                    <div>
-                        <h4 class="card-title">@group.Name</h4>
+                    <div style="margin: 5px 0px 0px 5px; ">
+                        <h4 class="card-title" style="font-weight: bold; font-style:italic;">@group.Name</h4>
+
                         <p class="card-text">@group.Description</p>
+                   
+                        
                     </div>
                     <div>
                         <form method="post">
