--- a/TestApplicaton/Views/Groups/Index.cshtml
+++ b/TestApplicaton/Views/Groups/Index.cshtml
@@ -21,7 +21,7 @@
 {
     foreach (var group in ViewBag.Groups)
     { 
-        <div class="hover card" style="border: 2px solid black; margin: 5px 0px 0px 5px;">
+        <div class="hover card" style="border: 1px solid darkgrey; border-radius: 10px; margin: 5px 0px 0px 5px;">
             <div class="card-body">
                 <div class="post-flex">
                     <div style="margin: 5px 0px 0px 5px; ">
